force-app/main/default/objects/Temporal_Eventos__c/Temporal_Eventos__c.object-meta.xml
<CustomObject>
    <label>Temporal Evento</label>
    <nameField>
        <label>Temporal Evento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temporal Eventos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>