force-app/main/default/objects/Temporal_Eventos__c/fields/Benefit__c.field-meta.xml
<CustomField>
    <fullName>Benefit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Benefit</label>
    <referenceTo>Benefit</referenceTo>
    <relationshipLabel>Temporal Eventos</relationshipLabel>
    <relationshipName>Temporal_Eventos</relationshipName>
    <type>Lookup</type>
</CustomField>