force-app/main/default/objects/Temporal_Eventos__c/fields/MA_ACT1__c.field-meta.xml
<CustomField>
    <fullName>MA_ACT1__c</fullName>
    <label>MA_ACT1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>