force-app/main/default/objects/Temporal_Eventos__c/fields/MA_ACT2__c.field-meta.xml
<CustomField>
    <fullName>MA_ACT2__c</fullName>
    <label>MA_ACT2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>