force-app/main/default/objects/Temporal_Eventos__c/fields/MA_ACT3__c.field-meta.xml
<CustomField>
    <fullName>MA_ACT3__c</fullName>
    <label>MA_ACT3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>