force-app/main/default/objects/Temporal_Eventos__c/fields/MA_BOLSA__c.field-meta.xml
<CustomField>
    <fullName>MA_BOLSA__c</fullName>
    <label>MA_BOLSA</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>