force-app/main/default/objects/Temporal_Eventos__c/fields/MA_FECHAS__c.field-meta.xml
<CustomField>
    <fullName>MA_FECHAS__c</fullName>
    <label>MA_FECHAS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>