force-app/main/default/objects/Temporal_Eventos__c/fields/MA_FECHAS_OK__c.field-meta.xml
<CustomField>
    <fullName>MA_FECHAS_OK__c</fullName>
    <label>MA_FECHAS_OK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>