force-app/main/default/objects/Temporal_Eventos__c/fields/MA_FECINI__c.field-meta.xml
<CustomField>
    <fullName>MA_FECINI__c</fullName>
    <label>MA_FECINI</label>
    <type>Date</type>
</CustomField>