force-app/main/default/objects/Temporal_Eventos__c/fields/MA_LUGAR__c.field-meta.xml
<CustomField>
    <fullName>MA_LUGAR__c</fullName>
    <label>MA_LUGAR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>