force-app/main/default/objects/Temporal_Eventos__c/fields/MA_NOMBRE__c.field-meta.xml
<CustomField>
    <fullName>MA_NOMBRE__c</fullName>
    <label>MA_NOMBRE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>