force-app/main/default/objects/Temporal_Eventos__c/fields/MA_NOMLUG__c.field-meta.xml
<CustomField>
    <fullName>MA_NOMLUG__c</fullName>
    <label>MA_NOMLUG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>