force-app/main/default/objects/Temporal_Eventos__c/fields/MA_OBLICU__c.field-meta.xml
<CustomField>
    <fullName>MA_OBLICU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MA_OBLICU</label>
    <type>Checkbox</type>
</CustomField>