force-app/main/default/objects/Temporal_Eventos__c/fields/MA_OBLILI__c.field-meta.xml
<CustomField>
    <fullName>MA_OBLILI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MA_OBLILI</label>
    <type>Checkbox</type>
</CustomField>