force-app/main/default/objects/Temporal_Eventos__c/fields/MA_PRECI2__c.field-meta.xml
<CustomField>
    <fullName>MA_PRECI2__c</fullName>
    <label>MA_PRECI2</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>