force-app/main/default/objects/Temporal_Eventos__c/fields/MA_PRECIO__c.field-meta.xml
<CustomField>
    <fullName>MA_PRECIO__c</fullName>
    <label>MA_PRECIO</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>