force-app/main/default/objects/Temporal_Eventos__c/fields/MA_STATUS__c.field-meta.xml
<CustomField>
    <fullName>MA_STATUS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MA_STATUS</label>
    <type>Checkbox</type>
</CustomField>