force-app/main/default/objects/Temporal_Eventos__c/fields/MA_WEB__c.field-meta.xml
<CustomField>
    <fullName>MA_WEB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MA_WEB</label>
    <type>Checkbox</type>
</CustomField>