force-app/main/default/objects/Temporal_Eventos__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>id__c</columns>
    <columns>MA_NUMACT__c</columns>
    <columns>MA_NOMBRE__c</columns>
    <columns>MA_NOMLUG__c</columns>
    <columns>MA_FECINI__c</columns>
    <columns>MA_FECHAS_OK__c</columns>
    <columns>Estado__c</columns>
    <columns>Tipo_Error__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Estado__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <label>All Records</label>
</ListView>